Fix for the flag overflow

--- a/src/theme/blocks/_slider.scss
+++ b/src/theme/blocks/_slider.scss
@@ -88,6 +88,10 @@ $sliderImagesAspectRatio: var(--slider-images-aspect-ratio, 16/9);
     color: #fff;
     transform: translateY(-50%);
 
+    @container (max-width: 1024px) {
+      padding: 30px 30px 30px 80px;
+    }
+
     @media only screen and (max-width: $computer-width) {
       position: static;
       width: 100%;
